# leviathan-net

./: Cargo.toml  DEVNET.md  NOTICE  README.md  docs-swarm-smoke.md  telemetry.json
.github/workflows/: leviathan-substrate.yml  publish-telemetry.yml
architectures/decentralized/solana-authorizer/programs/solana-authorizer/src/: lib.rs
architectures/decentralized/solana-client/src/: app.rs
architectures/decentralized/solana-common/src/: backend.rs  instructions.rs
architectures/decentralized/solana-coordinator/programs/solana-coordinator/src/: instance_state.rs  lib.rs  program_error.rs
architectures/decentralized/solana-tooling/: Cargo.toml
architectures/decentralized/solana-tooling/src/: daemon.rs  lib.rs  process_coordinator_instructions.rs  process_treasurer_instructions.rs
architectures/decentralized/solana-tooling/tests/fixtures/daemon/: fraud.vec-postcard  honest.vec-postcard
architectures/decentralized/solana-tooling/tests/suites/: memnet_coordinator_slash.rs  memnet_treasurer_bond.rs  memnet_treasurer_bond_gated_claim.rs  memnet_treasurer_bond_gated_join.rs  memnet_treasurer_bounty.rs  memnet_treasurer_committee_slash.rs  memnet_treasurer_slash_settle.rs  memnet_verifier_daemon.rs  memnet_verifier_daemon_committee.rs  mod.rs
architectures/decentralized/solana-treasurer/programs/solana-treasurer/: Cargo.toml
architectures/decentralized/solana-treasurer/programs/solana-treasurer/src/: lib.rs
architectures/decentralized/solana-treasurer/programs/solana-treasurer/src/logic/: mod.rs  participant_authorize_join.rs  participant_bond_deposit.rs  participant_bond_finalize_withdraw.rs  participant_bond_request_withdraw.rs  participant_claim.rs  participant_create.rs  run_bond_config_update.rs  run_create.rs  run_set_slash_bounty.rs  run_slash.rs  run_submit_audit_verdict.rs
architectures/decentralized/solana-treasurer/programs/solana-treasurer/src/state/: audit_verdict.rs  mod.rs  participant.rs  run.rs
config/leviathan/: README.md  genesis-rehearsal.toml
docs/: DISPUTE_DESIGN.md  OPS_RUNBOOK.md
scripts/: deploy-solana-test.sh  install.sh  leviathan-create-run.sh  leviathan-env.example  leviathan-node.sh  leviathan-swarm-mac.sh  leviathan-swarm.sh  publish-telemetry.sh
shared/client/src/state/: train.rs
shared/coordinator/src/: audit_selection.rs  coordinator.rs  data_selection.rs  lib.rs
shared/modeling/src/: distro.rs
shared/verifier/: Cargo.toml
shared/verifier/src/: lib.rs
telemetry/: README.md  docker-compose.yml  leviathan-killswitch.rules.yml  prometheus.yml
tools/rust-tools/leviathan-indexer/: Cargo.toml
tools/rust-tools/leviathan-indexer/src/: lib.rs
tools/rust-tools/leviathan-verifier/: Cargo.toml
tools/rust-tools/leviathan-verifier/src/: lib.rs  main.rs
tools/rust-tools/leviathan-verifier/tests/: audit.rs
tools/rust-tools/run-manager/src/: main.rs
tools/rust-tools/run-manager/src/commands/treasury/: bond.rs  mod.rs
