[workspace]
members = [
  "architectures/centralized/*",
  "architectures/decentralized/solana-client",
  "architectures/decentralized/testing",
  "architectures/decentralized/solana-tooling",
  "architectures/inference-only/*",
  "python/",
  "python/extension-impl/",
  "shared/*",
  "tools/rust-tools/*",
  "website/wasm",
]
resolver = "2"

[workspace.metadata.crane]
name = "psyche-workspace"

[workspace.package]
version = "0.2.0"

[workspace.dependencies]
psyche-coordinator = { path = "./shared/coordinator" }
psyche-core = { path = "./shared/core" }
psyche-client = { path = "./shared/client" }
psyche-data-provider = { path = "./shared/data-provider" }
psyche-eval = { path = "./shared/eval" }
psyche-inference = { path = "./shared/inference" }
psyche-network = { path = "./shared/network" }
psyche-modeling = { path = "./shared/modeling" }
psyche-python-extension = { path = "./python" }
psyche-python-extension-impl = { path = "./python/extension-impl" }
psyche-tui = { path = "./shared/tui" }
psyche-verifier = { path = "./shared/verifier" }
psyche-watcher = { path = "./shared/watcher" }
psyche-metrics = { path = "./shared/metrics" }
psyche-event-sourcing = { path = "./shared/event-sourcing" }

psyche-solana-client = { path = "./architectures/decentralized/solana-client" }
psyche-solana-rpc = { path = "./architectures/decentralized/solana-common" }
psyche-solana-authorizer = { path = "./architectures/decentralized/solana-authorizer/programs/solana-authorizer" }
psyche-solana-coordinator = { path = "./architectures/decentralized/solana-coordinator/programs/solana-coordinator" }
psyche-solana-treasurer = { path = "./architectures/decentralized/solana-treasurer/programs/solana-treasurer" }
psyche-solana-tooling = { path = "./architectures/decentralized/solana-tooling" }
run-manager = { path = "./tools/rust-tools/run-manager" }

hf-hub = { git = "https://github.com/NousResearch/hf-hub.git", rev = "269dc3df4e194f9071ddbdbd25ed90d4990f9262" }
tokio = { version = "1", features = [
  "io-util",
  "rt",
  "rt-multi-thread",
  "net",
  "macros",
  "time",
  "signal",
] }
tokio-stream = "0.1"
tokio-util = "0.7.12"
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive", "env"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.28"
tracing = { version = "0.1.40", features = ["std"] }
bytes = "1.7.1"
rand = "0.9.2"
rand_chacha = "0.9.0"
postcard = { version = "1.0.10", features = ["use-std"] }
sha2 = "0.10.8"
futures = "0.3.30"
futures-util = "0.3.30"
chrono = { version = "0.4.38", features = ["clock"] }
fast-math = "0.1"
async-trait = "0.1.82"
iroh = { version = "0.97.0", features = ["metrics"] }
iroh-relay = { version = "0.97.0", features = ["metrics"] }
iroh-blobs = { version = "0.99", features = ["metrics"] }
iroh-gossip = { version = "0.97.0" }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
flume = "0.11.1"
memmap2 = { version = "0.9.3", features = ["stable_deref_trait"] }
indicatif = "0.17.5"
tokenizers = { version = "0.20.0", default-features = false, features = [
  "onig",
] }
tch = { git = "https://github.com/NousResearch/tch-rs.git", rev = "dda507e05a776547a112b6854d1e611684f8c729" }
torch-sys = { git = "https://github.com/NousResearch/tch-rs.git", rev = "dda507e05a776547a112b6854d1e611684f8c729" }
pyo3-tch = { git = "https://github.com/NousResearch/tch-rs.git", rev = "dda507e05a776547a112b6854d1e611684f8c729" }
#tch = { path = "../tch-rs" }
#torch-sys = { path = "../tch-rs/torch-sys" }
#pyo3-tch = { path = "../tch-rs/pyo3-tch" }
time = { version = "0.3.36", features = ["formatting", "macros"] }
serde_with = { version = "3.11.0", features = ["macros"] }
bytemuck = { version = "1", features = ["derive", "min_const_generics"] }
thiserror = "2.0.3"
toml = "0.8.19"
ratatui = "0.28.1"
indexmap = { version = "2", features = ["serde"] }
clap-markdown = "0.1.4"
pyo3 = { version = "0.24" }
anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", rev = "a7a23eea308440a9fa9cb79cee7bddd30ab163d5" }
anchor-spl = { git = "https://github.com/coral-xyz/anchor.git", rev = "a7a23eea308440a9fa9cb79cee7bddd30ab163d5" }
anchor-client = { git = "https://github.com/coral-xyz/anchor.git", rev = "a7a23eea308440a9fa9cb79cee7bddd30ab163d5", features = [
  "async",
] }
anchor-lang-idl = { git = "https://github.com/coral-xyz/anchor.git", rev = "a7a23eea308440a9fa9cb79cee7bddd30ab163d5", features = [
  "build",
] }

ts-rs = { git = "https://github.com/arilotter/ts-rs.git", rev = "20c5bef07f3aa8ca3aa1b5cdad11ecdd60c64d34", features = [
  "psyche-impl",
] }
rayon = "1.10.0"
walkdir = "2.5"

# with iroh update need to specify digest and crypto-common versions
digest = { version = "=0.11.0-rc.10", default-features = false }
crypto-common = "0.2"

tikv-jemallocator = { version = "0.6.1", features = [
  "unprefixed_malloc_on_supported_platforms",
] }

# dev only
test-log = { version = "0.2.16", features = ["trace"] }
pretty_assertions = "1.4.1"
serial_test = "3.2.0"
rstest = "0.25.0"

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 1


[workspace.metadata.release]
tag-name = "v{{version}}"
sign-tag = true
push = true
publish = false
