[package]
name = "psyche-solana-tooling"
edition = "2021"
version.workspace = true

[dependencies]
anyhow = "1.0.2"

solana-sdk = "=2.1.4"
solana_toolbox_endpoint = "=0.4.4-solana-2.1.4"

anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", rev = "a7a23eea308440a9fa9cb79cee7bddd30ab163d5" }
anchor-spl = { git = "https://github.com/coral-xyz/anchor.git", rev = "a7a23eea308440a9fa9cb79cee7bddd30ab163d5" }

psyche-core = { path = "../../../shared/core" }
psyche-coordinator = { path = "../../../shared/coordinator" }

psyche-solana-authorizer = { path = "../solana-authorizer/programs/solana-authorizer", features = [
  "cpi",
] }
psyche-solana-coordinator = { path = "../solana-coordinator/programs/solana-coordinator", features = [
  "cpi",
] }
psyche-solana-treasurer = { path = "../solana-treasurer/programs/solana-treasurer", features = [
  "cpi",
] }
psyche-solana-mining-pool = { path = "../solana-mining-pool/programs/solana-mining-pool", features = [
  "cpi",
] }
psyche-solana-distributor = { path = "../solana-distributor/programs/solana-distributor", features = [
  "cpi",
] }

[[bin]]
name = "devnet-conviction-demo"
path = "src/bin/devnet_conviction_demo.rs"
required-features = ["demo"]

[[bin]]
name = "leviathan-verifier-daemon"
path = "src/bin/verifier_daemon.rs"
required-features = ["daemon"]

[features]
demo = ["dep:tokio"]
daemon = ["dep:tokio", "dep:clap", "dep:leviathan-verifier", "dep:psyche-verifier", "dep:tch"]

[dependencies.clap]
workspace = true
optional = true

[dependencies.tokio]
version = "1.42.0"
features = ["rt-multi-thread", "macros", "time"]
optional = true

[dependencies.leviathan-verifier]
path = "../../../tools/rust-tools/leviathan-verifier"
optional = true

[dependencies.psyche-verifier]
path = "../../../shared/verifier"
optional = true

[dependencies.tch]
workspace = true
optional = true

[dev-dependencies]
tokio = "1.42.0"
bytemuck = { version = "1", features = ["derive", "min_const_generics"] }
