[package]
name = "psyche-solana-treasurer"
version = "0.2.0"
description = "Psyche Solana Treasurer"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "psyche_solana_treasurer"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
  'cfg(target_os, values("solana"))',
  'cfg(feature, values("custom-heap", "custom-panic"))',
] }

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", rev = "a7a23eea308440a9fa9cb79cee7bddd30ab163d5", features = [
  "init-if-needed",
] }
anchor-spl = { git = "https://github.com/coral-xyz/anchor.git", rev = "a7a23eea308440a9fa9cb79cee7bddd30ab163d5" }
bytemuck = { version = "1", features = ["derive", "min_const_generics"] }
psyche-core = { path = "../../../../../shared/core" }
psyche-coordinator = { path = "../../../../../shared/coordinator" }
psyche-solana-coordinator = { path = "../../../solana-coordinator/programs/solana-coordinator", features = [
  "cpi",
] }
psyche-solana-authorizer = { path = "../../../solana-authorizer/programs/solana-authorizer", features = [
  "cpi",
] }
serde = { version = "1.0.209", features = ["derive"] }
